--- a/_posts/acs-aem-commons/features/2013-07-10-forms.md
+++ b/_posts/acs-aem-commons/features/2013-07-10-forms.md
@@ -4,7 +4,7 @@ title: Forms
 description: Simple yet flexible framework for building complex forms
 date: 2013-07-10 23:39:29
 thumbnail: /images/forms/thumbnail.png
-categories: acs-aem-commons features
+tags: acs-aem-commons-feature
 initial-release: 1.0.0
 ---
 
