--- a/_posts/acs-aem-commons/features/2013-08-01-widgets.md
+++ b/_posts/acs-aem-commons/features/2013-08-01-widgets.md
@@ -4,8 +4,7 @@ title: Custom Widgets and Validators
 description: Improve your dialogs
 date: 2014-01-02 23:39:29
 thumbnail: /images/widgets/ddpathfield.png
-categories: acs-aem-commons features
-tags: updated
+tags: acs-aem-commons-feature updated
 ---
 
 ## Vanity Path Uniqueness Check
