--- a/_posts/acs-aem-commons/features/2013-06-30-utils.textile
+++ b/_posts/acs-aem-commons/features/2013-06-30-utils.textile
@@ -4,7 +4,7 @@ title: ACS AEM Commons Utils
 description: A collection of common utils
 date: 2013-06-30 23:39:29
 thumbnail: /images/default/thumbnail.png
-categories: acs-aem-commons features
+tags: acs-aem-commons-feature
 initial-release: 1.0.0
 ---
 
