--- a/_posts/acs-aem-commons/features/2013-10-10-twitter.md
+++ b/_posts/acs-aem-commons/features/2013-10-10-twitter.md
@@ -4,7 +4,7 @@ title: Twitter Adapter Factory
 description: Easily interact with the Twitter API
 date: 2013-10-10 23:39:29
 thumbnail: /images/twitter/thumbnail.jpg
-categories: acs-aem-commons features
+tags: acs-aem-commons-feature
 initial-release: 1.2.0
 ---
 
