--- a/_posts/acs-aem-commons/features/2013-08-10-audio.textile
+++ b/_posts/acs-aem-commons/features/2013-08-10-audio.textile
@@ -4,7 +4,7 @@ title: Audio Component
 description: An HTML5 audio component and related workflow process
 date: 2013-08-10 23:39:29
 thumbnail: /images/audio/thumbnail.png
-tags: acs-aem-commons-feature
+tags: acs-aem-commons-features
 initial-release: 1.0.0
 ---
 
