--- a/_posts/acs-aem-commons/features/2013-08-30-dynamic-rte-configurations.textile
+++ b/_posts/acs-aem-commons/features/2013-08-30-dynamic-rte-configurations.textile
@@ -4,7 +4,7 @@ title: Dynamic RTE Configuration
 description: Create a re-usable RTE configurations
 date: 2013-08-30 23:39:29
 thumbnail: /images/dynamic-rte-configuration/thumbnail.png
-tags: acs-aem-commons-feature
+tags: acs-aem-commons-features
 initial-release: 1.0.0
 ---
 
