--- a/_posts/acs-aem-commons/features/2013-08-01-widgets.md
+++ b/_posts/acs-aem-commons/features/2013-08-01-widgets.md
@@ -5,6 +5,7 @@ description: Improve your dialogs
 date: 2014-01-02 23:39:29
 thumbnail: /images/widgets/ddpathfield.png
 tags: acs-aem-commons-features updated
+categories: acs-aem-commons features
 ---
 
 ## Vanity Path Uniqueness Check
