--- a/_posts/acs-aem-commons/features/2013-10-10-twitter.md
+++ b/_posts/acs-aem-commons/features/2013-10-10-twitter.md
@@ -5,6 +5,7 @@ description: Easily interact with the Twitter API
 date: 2013-10-10 23:39:29
 thumbnail: /images/twitter/thumbnail.jpg
 tags: acs-aem-commons-features
+categories: acs-aem-commons features
 initial-release: 1.2.0
 ---
 
