--- a/_posts/acs-aem-commons/features/2013-06-30-utils.textile
+++ b/_posts/acs-aem-commons/features/2013-06-30-utils.textile
@@ -4,7 +4,8 @@ title: ACS AEM Commons Utils
 description: A collection of common utils
 date: 2013-06-30 23:39:29
 thumbnail: /images/default/thumbnail.png
-tags: acs-aem-commons-feature
+tags: acs-aem-commons-features
+categories: acs-aem-commons features
 initial-release: 1.0.0
 ---
 
