--- a/_posts/acs-aem-commons/features/2013-07-10-forms.md
+++ b/_posts/acs-aem-commons/features/2013-07-10-forms.md
@@ -5,6 +5,7 @@ description: Simple yet flexible framework for building complex forms
 date: 2013-07-10 23:39:29
 thumbnail: /images/forms/thumbnail.png
 tags: acs-aem-commons-features
+categories: acs-aem-commons features
 initial-release: 1.0.0
 ---
 
