--- a/_posts/acs-aem-commons/features/2013-08-10-audio.textile
+++ b/_posts/acs-aem-commons/features/2013-08-10-audio.textile
@@ -5,6 +5,7 @@ description: An HTML5 audio component and related workflow process
 date: 2013-08-10 23:39:29
 thumbnail: /images/audio/thumbnail.png
 tags: acs-aem-commons-features
+categories: acs-aem-commons features
 initial-release: 1.0.0
 ---
 
