--- a/_posts/acs-aem-commons/features/2013-08-30-dynamic-rte-configurations.textile
+++ b/_posts/acs-aem-commons/features/2013-08-30-dynamic-rte-configurations.textile
@@ -5,6 +5,7 @@ description: Create a re-usable RTE configurations
 date: 2013-08-30 23:39:29
 thumbnail: /images/dynamic-rte-configuration/thumbnail.png
 tags: acs-aem-commons-features
+categories: acs-aem-commons features
 initial-release: 1.0.0
 ---
 
