removing new/updated tags from last release

--- a/_posts/acs-aem-commons/features/2013-08-01-widgets.md
+++ b/_posts/acs-aem-commons/features/2013-08-01-widgets.md
@@ -4,7 +4,7 @@ title: Custom Widgets and Validators
 description: Improve your dialogs
 date: 2014-01-02
 thumbnail: /images/widgets/ddpathfield.png
-tags: acs-aem-commons-features updated
+tags: acs-aem-commons-features
 categories: acs-aem-commons features
 ---
 
