--- a/_posts/acs-aem-commons/features/2013-08-01-widgets.md
+++ b/_posts/acs-aem-commons/features/2013-08-01-widgets.md
@@ -4,7 +4,7 @@ title: Custom Widgets and Validators
 description: Improve your dialogs
 date: 2014-01-02
 thumbnail: /images/widgets/ddpathfield.png
-tags: acs-aem-commons-features
+tags: acs-aem-commons-features updated
 categories: acs-aem-commons features
 ---
 
@@ -81,6 +81,10 @@ By default, the will accept either pages or assets. This behavior can be restric
 * `default`
 * `paragraph`
 * `product`
+
+## MultiField Minimum and Maximum Validator (Since 1.0.0)
+
+When installed, ACS AEM Commons seamlessly adds support to the existing [`CQ.form.MultiField`](http://dev.day.com/docs/en/cq/current/widgets-api/index.html?class=CQ.form.MultiField) widget to provide a minimum and/or maximum number of items. These are defined in configuration properties named `minItems` and `maxItems`.
 
 ## Additional Search Predicates (Since 1.0.0)
 
