--- a/_posts/acs-aem-commons/features/2013-07-10-forms.md
+++ b/_posts/acs-aem-commons/features/2013-07-10-forms.md
@@ -4,6 +4,7 @@ title: Forms
 description: Simple yet flexible framework for building complex forms
 date: 2013-07-10
 thumbnail: /images/forms/thumbnail.png
+feature-tags: component-dev
 tags: acs-aem-commons-features
 categories: acs-aem-commons features
 initial-release: 1.0.0
