--- a/_posts/acs-aem-commons/features/2013-08-01-widgets.md
+++ b/_posts/acs-aem-commons/features/2013-08-01-widgets.md
@@ -4,6 +4,7 @@ title: Custom Widgets and Validators
 description: Improve your dialogs
 date: 2014-01-02
 thumbnail: /images/widgets/ddpathfield.png
+feature-tags: component-dev
 tags: acs-aem-commons-features updated
 categories: acs-aem-commons features
 ---
