--- a/_posts/acs-aem-commons/features/2014-05-01-email-api.md
+++ b/_posts/acs-aem-commons/features/2014-05-01-email-api.md
@@ -4,6 +4,7 @@ title: Email API
 description: Generic Email Service to send template based emails
 date: 2014-04-01
 thumbnail: /images/email-api/thumbnail.png
+feature-tags: backend-dev
 tags: acs-aem-commons-features new
 categories: acs-aem-commons features
 initial-release: 1.6.0
