ACS AEM Commons 1.7.0 - Removed old new/updated tags; Created oak index manager feature page.

--- a/_posts/acs-aem-commons/features/2014-05-01-email-api.md
+++ b/_posts/acs-aem-commons/features/2014-05-01-email-api.md
@@ -5,7 +5,7 @@ description: Generic Email Service to send template based emails
 date: 2014-04-01
 thumbnail: /images/email-api/thumbnail.png
 feature-tags: backend-dev
-tags: acs-aem-commons-features new
+tags: acs-aem-commons-features
 categories: acs-aem-commons features
 initial-release: 1.6.0
 ---
