ACS AEM Commons 1.7.0 - Removed 1.6.2 Updated badges

--- a/_posts/acs-aem-commons/features/2013-10-10-twitter.md
+++ b/_posts/acs-aem-commons/features/2013-10-10-twitter.md
@@ -4,7 +4,7 @@ title: Twitter Adapter Factory
 description: Easily interact with the Twitter API
 date: 2013-10-10
 thumbnail: /images/twitter/thumbnail.jpg
-tags: acs-aem-commons-features updated
+tags: acs-aem-commons-features
 categories: acs-aem-commons features
 initial-release: 1.2.0
 ---
