--- a/_posts/acs-aem-commons/features/2014-11-12-quickly.textile
+++ b/_posts/acs-aem-commons/features/2014-11-12-quickly.textile
@@ -4,22 +4,31 @@ title: Quickly
 description: Quickly navigate AEM
 date: 2014-11-12
 thumbnail: /images/quickly/thumbnail.png
-tags: acs-aem-commons-features beta
-categories: acs-aem-commons features authoring
+feature-tags: authoring administration
+tags: acs-aem-commons-features beta new
+categories: acs-aem-commons features
 initial-release: 1.9.0
 ---
 
 h2. Beta
 
-Quickly is in Beta. Full cross-browser support is not yet available. Quickly injects itself into pages immediately before the closing body tag. Quickly uses AngularJS 1.3.
+Quickly is in Beta. 
+
+Full cross-browser support is not yet available. Quickly's browser support is limited to a subset of AngularJS 1.3's native browser support.
+
+Quickly injects itself into pages immediately before the closing body tag. Please report any conflicts between Quickly and AEM (or your application) to the "ACS AEM Commons GitHub Issues site":https://github.com/Adobe-Consulting-Services/acs-aem-commons/issues
+
+!/acs-aem-commons/images/quickly/go-screenshot.png!
 
 h2. Purpose
 
-Navigating all of AEM's Web UI's can be slow.
+Quickly's goal is to speed up navigation throughout AEM using a Searchlight/Alfread style HUD console that facilitates navigating AEM from the keyboard.
 
 h2. How to Use
 
-* Define a @sling:OsgiConfig@ to enable the Quickly engine
+* Remember that Quickly is in Beta!
+
+* Define a @sling:OsgiConfig@ to enable the Quickly engine for AEM Authors Only
 
 @/apps/mysite/config.author/com.adobe.acs.commons.quickly.impl.QuicklyEngineImpl.xml@
 
@@ -33,79 +42,101 @@ h2. How to Use
 * Set `results.mode` to blank for authoring oriented results
 * Set `results.mode` to `dev` for developer oriented results in the console (like CRXDE Lite). This includes all the "authoring" Web UIs.
 
+
+Or you can set it directly on your local via the "Adobe Web Console":http://localhost:4502/system/console/configMgr
+
+!/acs-aem-commons/images/quickly/felix-configmgr.png!
+
+
 h2. Supported Browsers
 
 h3. Open Quickly
 
-OS X Chrome/Safari
-*  ctrl-space
-
-OS X FireFox
-* shift-ctrl-space
-
-Windows Chrome/Safari
-*  ctrl-space
-
-Windows FireFox
-* shift-ctrl-space
+* OS X Chrome/Safari ~> @Ctrl-Space@
+* OS X FireFox ~> @Shift-Ctrl-Space@
+* Windows Chrome/Safari ~> @Ctrl-Space@
+* Windows FireFox ~> @Shift-Ctrl-Space@
+* Internet Explorer has not been tested 
 
 h3. Close Quickly
 
-* Esc
+* @Esc@
 
 h2. Operations
 
+Most operations support "type ahead" allowing filtering of results typing character sequences you are looking for.
+
 <div class="section">
+!/acs-aem-commons/images/quickly/help.png!
+
 h3. Help
 
-The help menu.
+Displays the help menu of all the available Operations
 
-* Command: `help`
+* Command: @help@
+
 </div>
 
 <div class="section">
+!/acs-aem-commons/images/quickly/back.png!
+	
 h3. Back
 
 List of last 25 accessed URIs in AEM by the user. Values are stored in local storage in the user's Web Browser.
 
-* Command: `back`
+* Command: @back@
 </div>
 
 <div class="section">
+!/acs-aem-commons/images/quickly/go.png!
+
 h3. Go
 
 Go to a list of pre-defined Web UIs.
 
-* Command: `go`
-* Supports `go!` which opens Web UI in a new browser tab
+* Command: @go@
+* Command: @go!@ opens Web UI in a new browser tab
+
+Go support two "special" instructions that switch the current AEM Authoring mode. Selecting these will appear to do nothing, but it will update the AEM Authoring mode cookie resulting in future Quickly navigation to take you to the Touch/Classic version of the Web UIs.
+
+* @go classic@
+* @go touch@
+
 </div>
 
 <div class="section">
+!/acs-aem-commons/images/quickly/docs.png!
+	
 h3. Docs
 
-Access Adobe's AEM documentation.
+Access Adobe's AEM documentation
 
-* Command: `docs`
-* Command: `docs [search-term]`
+* Command: @docs@
+* Command: @docs [search-term]@
+  * Searches for term on Adobe docs site using DuckDuckGo.com
 </div>
 
 <div class="section">
+!/acs-aem-commons/images/quickly/lastmod.png!
+	
 h3. Lastmod
 
 Find the last modified CQ Pages by user and date.
 
-* Command: `lastmod`
-* Command: `lastmod [userId] [time ago]`
+* Command: @lastmod@
+* Command: @lastmod [userId] [time ago]@
 </div>
 
 <div class="section">
+!/acs-aem-commons/images/quickly/favorites.png!
+	
 h3. Favorites
 
 List of last 25 accessed URIs in AEM by the user. Values are stored in local storage in the user's Web Browser.
 
-* Command: `*`
-* Command: `* rm` 
-  * Removes the select Favorite
+* Command: @*@
+* Command: @* rm@
+  * Removes the selected Favorite
 </div>
 
 
