--- a/_posts/acs-aem-commons/features/2014-11-12-quickly.textile
+++ b/_posts/acs-aem-commons/features/2014-11-12-quickly.textile
@@ -14,7 +14,7 @@ h2. Beta
 
 Quickly is in Beta. 
 
-Full cross-browser support is not yet available. Quickly's browser support is limited to a subset of AngularJS 1.3's native browser support.
+Full cross-browser support is not yet available. Chrome, Safari and FireFox are known to work on Windows and OSX. Internet Explorer 9 and above may work, but have not been tested.
 
 Quickly injects itself into pages immediately before the closing body tag. Please report any conflicts between Quickly and AEM (or your application) to the "ACS AEM Commons GitHub Issues site":https://github.com/Adobe-Consulting-Services/acs-aem-commons/issues
 
@@ -22,13 +22,15 @@ Quickly injects itself into pages immediately before the closing body tag. Pleas
 
 h2. Purpose
 
-Quickly's goal is to speed up navigation throughout AEM using a Searchlight/Alfread style HUD console that facilitates navigating AEM from the keyboard.
+Quickly's goal is to speed up navigation throughout AEM using a HUD console that facilitates navigating AEM from the keyboard.
 
 h2. How to Use
 
 * Remember that Quickly is in Beta!
 
-* Define a @sling:OsgiConfig@ to enable the Quickly engine for AEM Authors Only
+* Quickly works across AEM Web consoles: AEM's WebUIs, CRX Web UIs and even Felix Web consoles.
+
+* Define a @sling:OsgiConfig@ to enable the Quickly engine for AEM Authors Only.
 
 @/apps/mysite/config.author/com.adobe.acs.commons.quickly.impl.QuicklyEngineImpl.xml@
 
@@ -39,28 +41,16 @@ h2. How to Use
     results.mode="[dev]"/>
 {% endhighlight %}
 
-* Set `results.mode` to blank for authoring oriented results
-* Set `results.mode` to `dev` for developer oriented results in the console (like CRXDE Lite). This includes all the "authoring" Web UIs.
+* Set @results.mode@ to blank for authoring oriented results
+* Set @results.mode@ to `dev` for developer oriented results in the console (like CRXDE Lite). This includes all the "authoring" Web UIs.
 
 
 Or you can set it directly on your local via the "Adobe Web Console":http://localhost:4502/system/console/configMgr
-<<<<<<< HEAD
 
 !/acs-aem-commons/images/quickly/felix-configmgr.png!
 
-
-h2. Supported Browsers
 
 h3. Open Quickly
-=======
-
-!/acs-aem-commons/images/quickly/felix-configmgr.png!
-
-
-h2. Supported Browsers
-
-h4. Open Quickly
->>>>>>> 500317305de5a509a20ddd44fac3f796d920b16b
 
 * OS X Chrome/Safari ~> @Ctrl-Space@
 * OS X FireFox ~> @Shift-Ctrl-Space@
@@ -74,7 +64,7 @@ h3. Close Quickly
 
 h2. Operations
 
-Most operations support "type ahead" allowing filtering of results typing character sequences you are looking for.
+Most operations support "type ahead" allowing filtering of results typing character sequences you are looking for. Select a result and press "enter" to go to the result.
 
 <div class="section">
 !/acs-aem-commons/images/quickly/help.png!
@@ -92,7 +82,7 @@ Displays the help menu of all the available Operations
 	
 h3. Back
 
-List of last 25 accessed URIs in AEM by the user. Values are stored in local storage in the user's Web Browser.
+List of last 25 accessed URIs in AEM by the user. Values are stored in local storage in the user's Web browser.
 
 * Command: @back@
 </div>
@@ -134,7 +124,8 @@ h3. Lastmod
 Find the last modified CQ Pages by user and date.
 
 * Command: @lastmod@
-* Command: @lastmod [userId] [time ago]@
+* Command: @lastmod [userId] [ 1s | 2m | 3h | 4d | 5w | 6M | 7y ]@
+  * Defaults to: lastmod [current user] 1d
 </div>
 
 <div class="section">
@@ -142,11 +133,11 @@ Find the last modified CQ Pages by user and date.
 	
 h3. Favorites
 
-List of last 25 accessed URIs in AEM by the user. Values are stored in local storage in the user's Web Browser.
+List of last 25 accessed URIs in AEM by the user. Values are stored in local storage in the user's Web browser; different browsers means different favorite lists.
 
 * Command: @*@
 * Command: @* rm@
-  * Removes the selected Favorite
+  * Removes the selected Favorite from the list
 </div>
 
 
