--- a/_posts/acs-aem-commons/features/2014-01-12-named-image-transform.textile
+++ b/_posts/acs-aem-commons/features/2014-01-12-named-image-transform.textile
@@ -5,7 +5,7 @@ description: Consistently resize, crop and transform images
 date: 2014-09-18
 thumbnail: /images/named-image-transform/thumbnail.png
 feature-tags: component-dev
-tags: acs-aem-commons-features updated
+tags: acs-aem-commons-features
 categories: acs-aem-commons features
 initial-release: 1.5.0
 ---
