adding note to twitter page about 6.1 compatibility

--- a/_posts/acs-aem-commons/features/2013-10-10-twitter.md
+++ b/_posts/acs-aem-commons/features/2013-10-10-twitter.md
@@ -17,6 +17,12 @@ Provide easy access to the Twitter API using configuration defined in an AEM Clo
 
 This feature depends upon the [Twitter4J](http://twitter4j.org/) API, version 3.0.5 or higher. You can download a content package with an OSGi bundle of this library from [here](https://github.com/Adobe-Consulting-Services/com.adobe.acs.bundles.twitter4j/releases/tag/com.adobe.acs.bundles.twitter4j-1.0.0).
 
+### Special Requirement when using AEM 6.1+
+
+On AEM 6.1, this feature requires enabling of the CQ Configuration Manager component, which is disabled by default. This is required for cross-compatibility with AEM 6.0 and AEM 6.1.
+
+![image]({{ site.data.acs-aem-commons.baseurl }}/images/cloud-services/enable-configuration-manager.png)
+
 ## How to Use
 
 To use this library, configure a Twitter Cloud Service in AEM and associate it with your site. See [AEM Documentation](http://bit.ly/1i3px4i) for details.
