VLT-RCP and minor corrections to Tag Maker

--- a/_posts/acs-aem-tools/features/2015-06-21-tag-maker.md
+++ b/_posts/acs-aem-tools/features/2015-06-21-tag-maker.md
@@ -12,13 +12,13 @@ tags: acs-aem-tools-features new
 ## Getting Started
 
 
-Install the ACS AEM Tools package via the AEM Package Manager and then open Client Library Optimizer from the AEM Tools console, or directly at [/etc/acs-tools/tag-maker.html](http://localhost:4502/etc/acs-tools/tag-maker.html)
+Install the ACS AEM Tools package via the AEM Package Manager and then open Tag Maker from the AEM Tools console, or directly at [/etc/acs-tools/tag-maker.html](http://localhost:4502/etc/acs-tools/tag-maker.html)
 
 To get to the AEM Tools console from the Touch UI, from the left rail navigation, select Tools > ACS AEM Tools > Tag Maker.
 
 ## Overview
 
-Tag Maker is a tool aimed at the creation of Tag taxonomies in AEM. Excel provides a  simple, flexible and natural way of modeling Tag taxonomies outside of AEM, however transforming the Excel into AEM Tags can be an arduous process, especially for very large taxonomous.
+Tag Maker is a tool aimed at the creation of Tag taxonomies in AEM. Excel provides a  simple, flexible and natural way of modeling Tag taxonomies outside of AEM, however transforming the Excel into AEM Tags can be an arduous process, especially for very large taxonomies.
 
 ACS AEM Tools' Tag Maker bridges this gap by ingesting a CSV file (which Excel exports to), and creating the AEM Tag trees defined in the CSV.
 
