Fix typo in 2015-05-19-wcm-views.md

--- a/_posts/acs-aem-commons/features/2015-05-19-wcm-views.md
+++ b/_posts/acs-aem-commons/features/2015-05-19-wcm-views.md
@@ -1,7 +1,7 @@
 ---
 layout: acs-aem-commons_feature
 title: WCM Views
-description: To many edit zones making your head spin?
+description: Too many edit zones making your head spin?
 date: 2015-05-19
 thumbnail: /images/wcm-views/thumbnail.png
 feature-tags: authoring
