--- a/_posts/acs-aem-commons/features/2015-05-19-wcm-views.md
+++ b/_posts/acs-aem-commons/features/2015-05-19-wcm-views.md
@@ -5,7 +5,7 @@ description: Too many edit zones making your head spin?
 date: 2015-05-19
 thumbnail: /images/wcm-views/thumbnail.png
 feature-tags: authoring
-tags: acs-aem-commons-features new
+tags: acs-aem-commons-features
 categories: acs-aem-commons features
 initial-release: 1.10.0
 ---
