Fixed bounded resize name

--- a/_posts/acs-aem-commons/features/2014-01-12-named-image-transform.textile
+++ b/_posts/acs-aem-commons/features/2014-01-12-named-image-transform.textile
@@ -168,7 +168,7 @@ Resizes the image but will not resize past maximum dimension constraints. Accept
 
 Name
 
-* resize
+* @bounded-resize@
 
 Params
 
