ACS Commons 2.1.0 Release updates (feature status)

--- a/_posts/acs-aem-commons/features/2013-08-01-widgets.md
+++ b/_posts/acs-aem-commons/features/2013-08-01-widgets.md
@@ -5,7 +5,7 @@ description: Improve your dialogs
 date: 2014-01-02
 thumbnail: /images/widgets/ddpathfield.png
 feature-tags: component-dev
-tags: acs-aem-commons-features updated
+tags: acs-aem-commons-features
 categories: acs-aem-commons features
 ---
 
@@ -62,7 +62,7 @@ To ease working with these JSON objects, a JSP function exists:
 
     <%@ taglib prefix="widgets" uri="http://www.adobe.com/consulting/acs-aem-commons/widgets" %>
     <c:set var="definitions" value="${widgets:getMultiFieldPanelValues(resource, 'definitions')}"/>
-    
+
 At this point, `definitions` contains a `List<Map<String, String>>` which can then be iterated through using `<c:forEach>` (or any other way you might iterate over a collection):
 
 	<c:forEach items="${definitions}" var="definition">
@@ -122,4 +122,3 @@ Configuration Options:
 * `predicateName` - QueryBuilder predicate name. Defaults to `property`.
 * `rootPath` - Root path for path selection. Defaults to `/content`.
 * `pathFieldPredicateName` - See `predicate` on [`CQ.form.PathField`](http://dev.day.com/docs/en/cq/current/widgets-api/?class=CQ.form.PathField)
-
