--- a/_posts/acs-aem-tools/features/2015-06-22-vlt-rcp.md
+++ b/_posts/acs-aem-tools/features/2015-06-22-vlt-rcp.md
@@ -6,7 +6,7 @@ date: 2015-06-22
 thumbnail: /images/vlt-rcp/thumbnail.png
 initial-release: 0.0.22
 categories: acs-aem-tools
-tags: acs-aem-tools-features new
+tags: acs-aem-tools-features updated
 ---
 
 ## Getting Started
