--- a/_posts/acs-aem-commons/features/2013-10-10-twitter.md
+++ b/_posts/acs-aem-commons/features/2013-10-10-twitter.md
@@ -4,7 +4,7 @@ title: Twitter Adapter Factory
 description: Easily interact with the Twitter API
 date: 2013-10-10
 thumbnail: /images/twitter/thumbnail.jpg
-tags: acs-aem-commons-features
+tags: acs-aem-commons-features updated
 categories: acs-aem-commons features
 initial-release: 1.2.0
 ---
@@ -58,7 +58,7 @@ As both a useful utility and a demonstration of the use of the Twitter4J API, th
 
 ![image]({{ site.data.acs-aem-commons.baseurl }}/images/twitter/rate-limit-checker.png)
 
-## Feed Component (Since 1.6.0)
+## Twitter Feed Component (Since 1.6.0)
 
 ACS AEM Commons also includes a component which displays a list of tweets from a particular user (their timeline).
 
@@ -73,7 +73,15 @@ Before using the component, you must enable the scheduled job which refreshes ti
     scheduler.expression="0 0/15 * * * ?"/>   
 {% endhighlight %}
 
-In addition, if you create your own custom components (say by extending the default one), the component path list on `com.adobe.acs.commons.twitter.impl.TwitterFeedUpdaterImpl`:
+### Component Configuration
+
+Per component instance, you can configure the username, the number of tweets to be displayed, as well as whether or not to activate the page when the feed is refreshed:
+
+![image]({{ site.data.acs-aem-commons.baseurl }}/images/twitter/dialog.png)
+
+## Custom Components
+
+The Twitter Feed Component provided by ACS AEM Commons is very simple -- it simply output a list of tweets. In many cases, it is desirable to provide a custom component. If you do this, you can add your component path to the list on `com.adobe.acs.commons.twitter.impl.TwitterFeedUpdaterImpl`:
 
 {% highlight xml %}   
 <?xml version="1.0" encoding="UTF-8"?>
@@ -82,8 +90,8 @@ In addition, if you create your own custom components (say by extending the defa
     twitter.component.paths="[acs-commons/components/content/twitter-feed,myapp/components/content/twitter-feed]"/>   
 {% endhighlight %}
 
-### Component Configuration
+This will update instances of your component with a `tweets` multi-valued property when the scheduled job is run.
 
-Per component instance, you can configure the username, the number of tweets to be displayed, as well as whether or not to activate the page when the feed is refreshed:
+### Access to Raw JSON data (Since 2.3.0)
 
-![image]({{ site.data.acs-aem-commons.baseurl }}/images/twitter/dialog.png)
+In addition, for more complex cases, you may want to access the raw JSON data from the Twitter API. This is stored as a multi-valued property named `tweetsJson`. 
