--- a/_posts/acs-aem-commons/features/2013-08-10-audio.md
+++ b/_posts/acs-aem-commons/features/2013-08-10-audio.md
@@ -10,26 +10,26 @@ categories: acs-aem-commons features
 initial-release: 1.0.0
 ---
 
-h2. Purpose
+## Purpose
 
 Provide an HTML5 audio component, similar to the HTML5 video component.
 
-h2. Overview
+## Overview
 
 Similar to the AEM HTML5 video component, audio files added to the DAM are transcoded into formats supported by HTML5, currently mp3 and OGG Vorbis, by FFMPEG.
 
-h2. How to Use
+## How to Use
 
 * Edit the DAM Update Asset Workflow model
 * Add a Process Step using the "Encode Audio" process.
 * For the Process Arguments, provide "profile:ogghq,profile:mp3hq"
 * Save the Workflow model
 
-!{width: 400px}{{ site.data.acs-aem-commons.baseurl }}/images/audio/workflow-dialog.png!
+<img src="{{ site.data.acs-aem-commons.baseurl }}/images/audio/workflow-dialog.png" width="400"/>
 
 * Drop the Audio component into your page, either from the Sidekick or the Audio Content Finder tab.
 
-h2. Profiles
+## Profiles
 
 Like the HTML5 video support in AEM, audio support is based on profiles. Two profiles are included - "mp3hq" and "ogghq". If you need/want additional profiles, edit them just like you would a video profile.
 
