ACS Commons 2.4.0 badge updates, FAM addition

--- a/_posts/acs-aem-commons/features/2013-10-10-twitter.md
+++ b/_posts/acs-aem-commons/features/2013-10-10-twitter.md
@@ -4,7 +4,7 @@ title: Twitter Adapter Factory
 description: Easily interact with the Twitter API
 date: 2013-10-10
 thumbnail: /images/twitter/thumbnail.jpg
-tags: acs-aem-commons-features updated
+tags: acs-aem-commons-features
 categories: acs-aem-commons features
 initial-release: 1.2.0
 ---
@@ -94,4 +94,4 @@ This will update instances of your component with a `tweets` multi-valued proper
 
 ### Access to Raw JSON data (Since 2.3.0)
 
-In addition, for more complex cases, you may want to access the raw JSON data from the Twitter API. This is stored as a multi-valued property named `tweetsJson`. 
+In addition, for more complex cases, you may want to access the raw JSON data from the Twitter API. This is stored as a multi-valued property named `tweetsJson`.
