ACS Commons - 2.6.0/3.2.0 release updates

--- a/_posts/acs-aem-commons/features/2014-05-01-email-api.md
+++ b/_posts/acs-aem-commons/features/2014-05-01-email-api.md
@@ -5,20 +5,20 @@ description: Generic Email Service to send template based emails
 date: 2014-04-01
 thumbnail: /images/email-api/thumbnail.png
 feature-tags: backend-dev
-tags: acs-aem-commons-features
+tags: acs-aem-commons-features updated
 categories: acs-aem-commons features
 initial-release: 1.6.0
 ---
 
 ## Purpose
 
-The `EmailService` provides APIs for sending emails through a centrally configured service. 
-You can create author-able templates so that the developers do not need to be involved in creating and updating email templates. 
+The `EmailService` provides APIs for sending emails through a centrally configured service.
+You can create author-able templates so that the developers do not need to be involved in creating and updating email templates.
 
 ## Email API definition
 
-### Interface `com.adobe.acs.commons.email.EmailService`	
- 
+### Interface `com.adobe.acs.commons.email.EmailService`
+
 	 List<InternetAddress> sendEmail(String templatePath, Map<String, String> emailParams, InternetAddress... recipients);
 
 	 List<String> boolean sendEmail(String templatePath, Map<String, String> emailParams, String... recipients);
@@ -39,15 +39,15 @@ Sends an email to one or more recipients based on the template text specified by
 
 
 **Returns**  
-`failureList` - Returns list of those recipients addresses for which the email sent was not successful. A wholy successful `sendEmail` results in an empty list.
+`failureList` - Returns list of those recipients addresses for which the email sent was not successful. A wholly successful `sendEmail` results in an empty list.
 
 ## How to Use
-	
+
 ### Configuring the Mail Service
 
 The first step to sending emails through this service is to configure the Day CQ Mail Service component whose pid is `com.day.cq.mailer.DefaultMailService`.
 
-The following `sling:OsgiConfig` can be used to configure the mail service, for example: 
+The following `sling:OsgiConfig` can be used to configure the mail service, for example:
 
 	/apps/myapp/config/com.day.cq.mailer.DefaultMailService.xml
 
@@ -72,14 +72,14 @@ Enter all of the relevant information for your current SMTP provider.  If you do
 
 Once you have the Day CQ Mail Service configured you should be able to send emails.  If, later on you run into problems with getting a null Message Gateway, you probably entered something incorrectly here.
 
-### Creating an Email Template 
+### Creating an Email Template
 
 Templates are `nt:file` nodes in the repository containing a text file.
 The text file contains the complete email. Email headers are defined as the first lines of the file in the format `Header-Name: Header-Value`, one header per line. Headers supporting multiple values can thus have several header lines. The supported headers are the standard email headers. After the last header line put an empty line and start the email body afterwards.
 
 Below is a sample email template file. All of the text in the format `${variable}` will be replaced with the variable matching the name inside the brackets.  These variables are injected dynamically by this API.  
 
-	
+
 	From: admin@adobe.com
 	Subject: Greetings
 	CC: ${ccrecipient}
@@ -107,15 +107,18 @@ This template or any updates to it should be activated/replicated to the publish
 
 The EmailService is an OSGi service and can be injected using `@Reference` in the calling class.
 
+{% highlight java %}
 	@Reference
 	EmailService emailService;
 
 	emailService.sendEmail(templatePath, emailParams, recipients);
-
+{% endhighlight %}
 
 ## JSP Example
 Example of a code snippet that uses the EmailService API to sent email is show below:
- 
+
+
+{% highlight jsp %}
 	<%@include file="/libs/foundation/global.jsp"%>
 	<%@page import="com.adobe.acs.commons.email.EmailService,
 	        java.util.*"%><%
@@ -126,7 +129,7 @@ Example of a code snippet that uses the EmailService API to sent email is show b
 	// Specify the template file to use (this is an absolute path in the JCR)
 	String templatePath = "/etc/notifications/email/emailTemplate.txt";
 
-	//Set the dynamic vaiables of your email template
+	//Set the dynamic variables of your email template
 	Map<String, String> emailParams = new HashMap<String,String>();
 	emailParams.put("body","hello there");
 
@@ -148,3 +151,28 @@ Example of a code snippet that uses the EmailService API to sent email is show b
 	}
 
 	%>
+{% endhighlight %}
+
+## Using the Email API to send attachments (since v2.6.0/3.2.0)
+
+The `sendMail(..)` method now supports the following signature:
+
+{% highlight java %}
+public List<String> sendEmail(String templatePath, Map<String, String> emailParams, Map<String, DataSource> attachments, String... recipients)
+
+public List<InternetAddress> sendEmail(String templatePath, Map<String, String> emailParams, Map<String, DataSource> attachments, InternetAddress... recipients)
+{% endhighlight %}
+
+E-mail attachments can be passed in via the attachments parameter.
+
+Example
+
+{% highlight jsp %}
+...
+Map<String, DataSource> attachments = new HashMap<>();
+
+String attachmentContentsAsString = "This text should be in the attache txt file."
+attachments.put("attachment1.txt", new ByteArrayDataSource(attachmentContentsAsString, "text/plain"));
+...
+List<String> participantList = emailService.sendEmail(htmlEmailTemplatePath, emailParams, attachments, recipients);
+{% endhighlight %}
