Localized Title Converter

--- a/_posts/acs-aem-tools/features/2015-06-21-tag-maker.md
+++ b/_posts/acs-aem-tools/features/2015-06-21-tag-maker.md
@@ -62,3 +62,14 @@ Expects the cell value to be in the following format: `Tag Title {{ "{{ node nam
 
 * Tag title: Everything in the cell before first instance of `{{"{{"}}` with leading and trailing white-space removed.
 * Node name: Everything between `{{"{{"}}` and `}}` with leading and trailing white-space removed.
+
+
+### Localized Title {{ en[Title] fr[Titre] es[Titulo] "{{ node-name " }}}}
+
+Expects the cell value to be in the following format: `default[Default Title] locale_code1[Localized Title] ... locale_codeN[Localized Title] {{ "{{ node name "}}}}`
+
+* Localized Tag titles 
+  * Default: `default[Default Title]` the faux locale of "default" indicates the default Tag title (`[cq:Tag]@jcr:title`). If no default is provided the first localized title is used as the default title value.
+  * Locales: Each localized title is provided via a space seperated list in the format of `locale_code[Local Title]`
+     * Examples:`en[Title] fr_fr[Titre] es[Titulo]`
+* Node name: Everything between `{{"{{"}}` and `}}` with leading and trailing white-space removed. Note the node name is not localized.
