Embed videos for Tag Maker, CSV Asset Importer and updated size of the Review Task Asset Mover

--- a/_posts/acs-aem-tools/features/2015-06-21-tag-maker.md
+++ b/_posts/acs-aem-tools/features/2015-06-21-tag-maker.md
@@ -14,7 +14,9 @@ tags: acs-aem-tools-features
 
 Install the ACS AEM Tools package via the AEM Package Manager and then open Tag Maker from the AEM Tools console, or directly at [/etc/acs-tools/tag-maker.html](http://localhost:4502/etc/acs-tools/tag-maker.html)
 
-To get to the AEM Tools console from the Touch UI, from the left rail navigation, select Tools > ACS AEM Tools > Tag Maker.
+To get to the AEM Tools console from the Touch UI, select Tools > ACS AEM Tools > Tag Maker.
+
+<iframe width="853" height="480" src="https://www.youtube.com/embed/l_S77s1pT30" frameborder="0" allowfullscreen></iframe>
 
 ## Overview
 
