ACS Tools v0.0.30 .. user-event-data -> event-user-data

--- a/_posts/acs-aem-tools/features/2015-06-21-tag-maker.md
+++ b/_posts/acs-aem-tools/features/2015-06-21-tag-maker.md
@@ -77,6 +77,6 @@ Expects the cell value to be in the following format: `default[Default Title] lo
 * Node name: Everything between `{{"{{"}}` and `}}` with leading and trailing white-space removed. Note the node name is not localized.
 
 
-### user-event-data (Since v0.0.30)
+### event-user-data (Since v0.0.30)
 
-`user-event-data` of `acs-aem-tools.tag-maker` is set for modifications invoked by this feature.
+`event-user-data` of `acs-aem-tools.tag-maker` is set for modifications invoked by this feature.
