ACS Commons - Users to CSV Exporter - Incorrect link fix

--- a/_posts/acs-aem-commons/features/2016-11-02-exports.md
+++ b/_posts/acs-aem-commons/features/2016-11-02-exports.md
@@ -12,7 +12,7 @@ initial-release: 3.4.0
 
 ## Users to CSV Exporter
 
-Navigate to [http://localhost:4502/etc/miscadmin/acs-commons/exporters(http://localhost:4502/etc/miscadmin/acs-commons/exporters) and create a new **Users to CSV Export** page.
+Navigate to [http://localhost:4502/miscadmin#/etc/acs-commons/exporters](http://localhost:4502/miscadmin#/etc/acs-commons/exporters) and create a new **Users to CSV Export** page.
 
 Name the page appropriately as the page's report configuration can be saved and run again later.
 
