--- a/_posts/acs-aem-commons/features/2013-10-10-twitter.md
+++ b/_posts/acs-aem-commons/features/2013-10-10-twitter.md
@@ -95,3 +95,15 @@ This will update instances of your component with a `tweets` multi-valued proper
 ### Access to Raw JSON data (Since 2.3.0)
 
 In addition, for more complex cases, you may want to access the raw JSON data from the Twitter API. This is stored as a multi-valued property named `tweetsJson`.
+
+## Service User
+
+On AEM 6.2 or above, this service uses a Service User for repository access. This user is configured with
+the expected permissions required, but additional permissions may be required if your repository design
+deviates from the expected structure.
+
+User name: `acs-commons-twitter-updater-service`
+
+ACLs:
+
+* `jcr:read`, `jcr:modifyProperties`, and `crx:replicate` on `/content`
