--- a/_posts/acs-aem-commons/features/2014-05-01-email-api.md
+++ b/_posts/acs-aem-commons/features/2014-05-01-email-api.md
@@ -176,3 +176,15 @@ attachments.put("attachment1.txt", new ByteArrayDataSource(attachmentContentsAsS
 ...
 List<String> participantList = emailService.sendEmail(htmlEmailTemplatePath, emailParams, attachments, recipients);
 {% endhighlight %}
+
+## Service User
+
+On AEM 6.2 or above, this service uses a Service User for repository access. This user is configured with
+the expected permissions required, but additional permissions may be required if your repository design
+deviates from the expected structure.
+
+User name: `acs-commons-email-service`
+
+ACLs:
+
+* `jcr:read` on `/etc/notification/email`
