--- a/_posts/acs-aem-commons/features/2013-07-10-forms.md
+++ b/_posts/acs-aem-commons/features/2013-07-10-forms.md
@@ -203,5 +203,15 @@ if(form.hasErrors()) {
 %>
 {% endhighlight %}
 
+## Service User
 
+On AEM 6.2 or above, this service uses a Service User for repository access. This user is configured with
+the expected permissions required, but additional permissions may be required if your repository design
+deviates from the expected structure.
+
+User name: `acs-commons-form-helper-service`
+
+ACLs:
+
+* n/a (this user is only necessary for mapping resources)
 
