Add documentation for new Multi Field Panel helper
https://github.com/Adobe-Consulting-Services/acs-aem-commons/pull/871/files

--- a/_posts/acs-aem-commons/features/2013-08-01-widgets.md
+++ b/_posts/acs-aem-commons/features/2013-08-01-widgets.md
@@ -69,6 +69,19 @@ At this point, `definitions` contains a `List<Map<String, String>>` which can th
 	    <dt>${xss:encodeForHTML(xssAPI, definition['term'])}</dt>
 	    <dd>${xss:encodeForHTML(xssAPI, definition['definition'])}</dt>
 	</c:forEach>
+        
+To work with these JSON objects in sightly, a WCMUse class exists:
+
+       <sly data-sly-use.multiField="${ 'com.adobe.acs.commons.widgets.MultiFieldPanelWCMUse' @ name='definitions' }">
+       
+At this point, `multiField` contains an instance of the class and the property `values` can be iterated through using `data-sly-list`:
+       
+       <dl data-sly-list.definition="${ multiField.values }">
+            <dt>${ definition.term }</dt>
+            <dd>${ definition.definition }</dd>
+       </dl>
+ 
+It is possible to retrieve values from diferent resources setting the `location` parameter in the WCMUse initialization. If none is set, the current resource is used. 
 
 ## Drag-and-Drop Path Field (Since 1.1.0)
 
